# EDCOP

./: .dockerignore  .gitignore  Jenkinsfile  Makefile  README.md  breakout_cable_2.png.html  corelayout.png.html  corerolelayout.png.html  vm_multiple_sensors.png.html  vm_single_sensor.png.html  youtube_video.png.html
cni-bin/: README.md
docs/: Makefile  conf.py  index.rst  ingress_design.rst  installation_guide.rst  intro.rst  network_design_and_deployment.rst  node_labels.rst  optimization_guide.rst  storage_guide.rst  syslog_design.rst
docs/images/: backend.png.html  breakout_cable_1.png.html  connectivity.png.html  dac_cable.png.html  edcop_network.png.html  installation_prompt.png.html  network_configuration.png.html  stacked_platform_concept.png.html  tap_traffic_1.png.html  tap_traffic_2.png.html
edcop-cni/: README.md  edcop-cni.spec
ext-packages/: README.md
ext-packages/edcop-cni/: edcop-cni.spec
ext-packages/edcop-cockpit/: edcop-cockpit.spec
ext-packages/edcop-cockpit/branding/edcop/: Makefile.am  branding.css
ext-packages/edcop-helm/: edcop-helm.spec
firstboot/: firstboot-bluebox.sh  firstboot-cisco.sh  firstboot-virtual.sh  firstboot.sh
kickstart-menu/: README.md  Vagrantfile  classes.py  kickstart.py  menu.py  requirements.txt
kickstarts/: README.md  main.ks  network.ks  packages.ks  post-chroot.ks  post-nochroot.ks  pre-select.ks  storage.ks
kubernetes/: kubernetes-dashboard-http.yaml  traefik-ingress-controller.yaml
pxeboot/: default  default-bluebox  default-cisco  default-virtual
webserver/: nginx.conf  proxy.conf
(+79 files in other folders)
