centosbrandingdir = $(datadir)/cockpit/branding/centos

centosbranding_DATA = \
	src/branding/centos/apple-touch-icon.png \
	src/branding/centos/bg-plain.jpg \
	src/branding/centos/branding.css \
	src/branding/centos/favicon.ico \
	src/branding/centos/logo.png \
	$(NULL)

EXTRA_DIST += \
	$(centosbranding_DATA) \
	src/branding/centos/logo.svg \
	$(NULL)
